<resources>
    <string name="app_name">Project</string>
    <string name="header">Classroom Finder</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="location_prefix">Current Location: </string>
    <string name="class_input_hint">Enter Destination</string>
    <string name="image_description">An image of the current location\'s building</string>
    <string name="help_instructions">Select building and room to guide you to your class</string>
    <string name="help_to_main">Go back</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="change_password">Change Password</string>
    <string name="submit">Submit</string>
    <string name="settings_title">Change Password</string>
    <string name="username_hint">Enter username\n</string>
    <string name="password_hint">Enter New Password</string>
    <string name="cancel">Cancel</string>
    <string-array name="building_names">
        <item>Broad Business College</item>
        <item>Engineering Building</item>
        <item>STEM Building</item>
    </string-array>
</resources>