<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HelpActivity">

    <TextView
        android:id="@+id/textViewHelpActivity"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/help"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textViewHelpInstrunctions"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/help_instructions"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="249dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:onClick="onStartMain"
        android:text="@string/help_to_main"
        android:textSize="30sp"/>
</LinearLayout>