<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Header TextView -->
    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/spartan_green"
        android:text="@string/header"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Current Location TextView (Dynamic) -->
    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:text="@string/location_prefix"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/headerTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- Classroom Number Input EditText -->

    <EditText
        android:id="@+id/classroomInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/class_input_hint"
        android:ems="10"

        android:autofillHints="none"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/locationTextView"
        app:layout_constraintEnd_toStartOf="@id/buildingImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <View
        android:id="@+id/bufferView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/classroomInput"
        app:layout_constraintStart_toEndOf="@id/bufferView"
        app:layout_constraintEnd_toStartOf="@+id/mapView"
        app:layout_constraintBottom_toTopOf="@id/buildingImageView"/>
    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@id/classroomInput"
        app:layout_constraintStart_toEndOf="@id/bufferView"
        app:layout_constraintEnd_toStartOf="@id/mapView"
        android:onClick="setToLocation"/>

    <!-- Current Building ImageView (Dynamic) -->
    <ImageView
        android:id="@+id/buildingImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/road"
        android:contentDescription="@string/image_description"
        app:layout_constraintTop_toBottomOf="@id/locationTextView"
        app:layout_constraintEnd_toEndOf="parent" />


    <!--    &lt;!&ndash; Map View &ndash;&gt;-->
    <!--    <msu.edu.cse476.buglakda.project.MapView-->
    <!--        android:id="@+id/mapView"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:background="@color/kelly_green"-->
    <!--        android:name="com.google.android.gms.maps.SupportMapFragment"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/buildingImageView"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/helpButton"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent" />-->

    <fragment
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/kelly_green"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        app:layout_constraintTop_toBottomOf="@id/buildingImageView"
        app:layout_constraintBottom_toTopOf="@id/helpButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <!-- Help Button -->
    <Button
        android:id="@+id/helpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/refresh_green"
        android:onClick="onStartHelp"
        android:text="@string/help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/settingsButton"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />


    <!-- Settings Button -->
    <Button
        android:id="@+id/settingsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/refresh_green"
        android:onClick="onStartSettings"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/helpButton" />

</androidx.constraintlayout.widget.ConstraintLayout>